Show Groups/Users/Filetypes scrollbars only on hover to prevent most content jumping when hovering over TreeMap.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -172,8 +172,11 @@ rect + text {
 
 #details td div {
   white-space: nowrap;
-  overflow: auto;
-  scrollbar-gutter: stable both-edges;
+  overflow-x: hidden;
+}
+
+#details td div:hover {
+  overflow-x: auto;
 }
 
 .download {
